# test-infra

./: RepoHandleCacheConfig.json  go.sum  requirements3.txt  ！
prow/cmd/deck/static/: new_command_help.js
prow/cmd/deck/template/: new_command_help.html
prow/cmd/gitee-hook/: BUILD.bazel  main.go  plugins.go
prow/external-plugins/hookagent/: config.go  main.go  server.go
prow/flagutil/: gitee.go
prow/gitee/: BUILD.bazel  client.go  interface.go  type.go
prow/gitee-plugins/: dispatcher.go  util.go
prow/gitee-plugins/approve/: BUILD.bazel  approve.go
prow/gitee-plugins/assign/: assign.go  client.go
prow/gitee-plugins/associate/: BUILD.bazel  associate.go  issue.go  milestone.go
prow/gitee-plugins/checkpr/: checkpr.go
prow/gitee-plugins/cla/: cla.go
prow/gitee-plugins/cla-euler/: cla.go
prow/gitee-plugins/close/: close.go  config.go
prow/gitee-plugins/label/: BUILD.bazel  action.go  check.go  clear_label.go  config.go  label.go
prow/gitee-plugins/lgtm/: client.go  lgtm.go
prow/gitee-plugins/lifecycle/: close.go  lifecycle.go  reopen.go
prow/gitee-plugins/reminder/: BUILD.bazel  client.go  config.go  reminder.go
prow/gitee-plugins/reopen/: config.go  reopen.go
prow/gitee-plugins/review-trigger/: reviewer-helper.go
prow/gitee-plugins/tide/: BUILD.bazel  config.go  tide.go
prow/gitee-tide/client/: comment.go
prow/job-reporter/gitee/: BUILD.bazel  client.go  comment.go
prow/plugins/lgtm/: export.go
prow/repoowners/: repoowners.go
